# ComfyUI-QwenASR

./: AILab_QwenASR.py  README.md  config.json  pyproject.toml  requirements.txt
example_workflows/: ASR.json  Subtitle.json
web/js/: appearance.js
